modificamos pagina productos con sass

--- a/sass/main.css
+++ b/sass/main.css
@@ -153,6 +153,13 @@ span {
   color: white;
 }
 
+.fa {
+  background-color: rgb(55, 55, 255);
+  padding: 8px;
+  border-radius: 50px;
+  color: white;
+}
+
 .header {
   display: flex;
   justify-content: space-between;
@@ -168,6 +175,7 @@ li {
   list-style: none;
 }
 
+/*contacto*/
 .formulario {
   display: flex;
   justify-content: center;
