mejoramos los headers de todas las paginas

--- a/sass/main.css
+++ b/sass/main.css
@@ -29,6 +29,10 @@ i {
   position: sticky;
 }
 
+.headerPaginas i {
+  color: black;
+}
+
 /*index*/
 .inicio {
   background-image: url(../img/coca-cola.jpg);
