--- a/sass/main.scss
+++ b/sass/main.scss
@@ -24,6 +24,12 @@ i{
     padding: 1rem 0 3rem 0;
     position: sticky;
 }
+.headerPaginas {
+    i{
+        color: black;
+    }
+    
+}
 /*index*/
 .inicio{
     background-image: url(../img/coca-cola.jpg);
