agregamos media queries

--- a/sass/main.css
+++ b/sass/main.css
@@ -164,6 +164,12 @@ span {
   color: white;
 }
 
+@media only screen and (max-width: 900px) {
+  .referencias {
+    display: none;
+  }
+}
+/* header paginas */
 .header {
   display: flex;
   justify-content: space-between;
