--- a/sass/main.css
+++ b/sass/main.css
@@ -35,7 +35,7 @@ i {
 
 /*index*/
 .inicio {
-  background-image: url(../img/coca-cola.jpg);
+  background-image: url(../img/conttifondo.png);
   background-position: center center;
   height: 100vh;
   width: 100%;
