--- a/sass/main.scss
+++ b/sass/main.scss
@@ -32,7 +32,7 @@ i{
 }
 /*index*/
 .inicio{
-    background-image: url(../img/coca-cola.jpg);
+    background-image: url(../img/conttifondo.png);
     background-position: center center;
     height:100vh;
     width: 100%;
