--- a/sass/main.css
+++ b/sass/main.css
@@ -35,11 +35,28 @@ i {
 
 /*index*/
 .inicio {
-  background-image: url(../img/conttifondo.png);
+  background-image: url(../img/coca-cola.jpg);
   background-position: center center;
   height: 100vh;
   width: 100%;
   background-size: cover;
+}
+
+.texto-inicio {
+  color: white;
+  font-size: 2rem;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-shadow: 0 0 5px rgb(88, 88, 88);
+  text-align: center;
+}
+
+.mas-vendidos h2 {
+  text-align: center;
+  color: red;
+  margin: 10px;
 }
 
 .mas-vendidos h2 {
@@ -55,10 +72,6 @@ i {
 
 .productos {
   align-items: center;
-}
-.btn:hover{
-  transform: scale(1.2);
-  transition: all 1s;
 }
 
 .menu {
