cambiamos div por article index

--- a/sass/main.css
+++ b/sass/main.css
@@ -53,6 +53,14 @@ i {
   text-align: center;
 }
 
+.texto-inicio h1 {
+  font-size: 3rem;
+}
+
+.texto-inicio p {
+  font-size: 1, 5rem;
+}
+
 .mas-vendidos h2 {
   text-align: center;
   color: red;
