--- a/sass/main.css
+++ b/sass/main.css
@@ -82,6 +82,11 @@ i {
   align-items: center;
 }
 
+article .btn:hover {
+  transform: scale(1.2);
+  transition: 200ms;
+}
+
 .menu {
   margin-top: 11px;
 }
