--- a/styles/styles.css
+++ b/styles/styles.css
@@ -223,6 +223,101 @@ li {
     width: 100%;
   }
   /*medias*/
-  @media screen (min){
-    
+  @media (min-width: 0px) and (max-width:390px) {
+    .texto-inicio{
+      font-size: 15px;
+    }
+    .newsletter,
+    .referencias {
+      display: none;
+    }
+    .productos .card {
+      width: 100%;
+      max-width: 230px; 
+      margin-left: 0;
+      margin-right: 0;
+      margin-bottom: 30px;
+    }
+    .productos{
+      justify-content: center;
+    }
+    .texto-inicio {
+      position: absolute;
+      top: 60%;
+      left: 50%;
+    }
+    .container {
+      justify-content: center;
+    }
+    .col-3 {
+      width: 100%;
+      text-align: center;
+      margin-bottom: 10px;
   }
+  .links {
+    display: flex;
+    justify-content: center;
+  }
+
+  .redes {
+    text-align: center;
+  }
+
+  .redes ul {
+    display: flex;
+    justify-content: center;
+    list-style: none;
+    padding: 0;
+  }
+
+  .redes ul li {
+    margin: 0 10px;
+  }
+}
+  @media (min-width: 720px) and (max-width:1050px) {
+    .texto-inicio{
+      font-size: 25px;
+    }
+  }
+  @media (min-width: 390px) and (max-width:640px) {
+    .texto-inicio{
+      font-size: 20px;
+    }
+    .pie .newsletter,
+    .pie .referencias {
+      display: none;
+    }
+    .texto-inicio {
+      position: absolute;
+      top: 60%;
+      left: 50%;
+    }
+    .row {
+      justify-content: center;
+    }
+  
+    .col-3 {
+      width: 33.33%;
+      text-align: center;
+      margin-bottom: 10px;
+    }
+    .links {
+      display: flex;
+      justify-content: center;
+    }
+  
+    .redes {
+      text-align: center;
+    }
+  
+    .redes ul {
+      display: flex;
+      justify-content: center;
+      list-style: none;
+      padding: 0;
+    }
+  
+    .redes ul li {
+      margin: 0 10px;
+    }
+}
